--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "date-fns": "^3.6.0",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "nodemon" : "^2.0.12"
   }
 }
