--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node.js-learning",
   "version": "1.0.0",
-  "description": "",
+  "description": "Express Tutorial",
   "main": "server.js",
   "scripts": {
     "start": "node index",
@@ -11,9 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "date-fns": "^3.6.0",
+    "express": "^4.19.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "nodemon" : "^2.0.12"
+    "nodemon": "^2.0.12"
   }
 }
